Remove -XX:MaxPermSize=256m, breaks Java 17
Should not be necessary to replace it with MaxMetaspaceSize
since that one by default is "indefinite", and the perm size was
originally increased probably